# o2ms

./: .gitignore  Cargo.toml  LICENSE  README.md  RESTERM.md  plan.md
configs/: mock-server.minimal.yaml  mock-server.springboot.yaml  mock-server.yaml
crate/: Cargo.toml
crate/src/: cli.rs  error.rs  lib.rs  main.rs
crate/src/app/: mod.rs  startup.rs  state.rs
crate/src/claims/: issue.rs  merge.rs  mod.rs  protect.rs
crate/src/config/: loader.rs  mod.rs  model.rs  validate.rs
crate/src/http/: admin.rs  health.rs  mod.rs  oauth.rs  router.rs  token_response.rs
crate/src/registry/: clients.rs  users.rs
crate/src/upstream/: adapter.rs  mod.rs  patching.rs
crate/tests/: smoke.rs
docs/: README.md  api.md  configuration.md  quick-design.md  springboot.md
examples/springboot-v4-resource-server/: pom.xml
examples/springboot-v4-resource-server/src/main/java/com/example/demo/: ApiController.java  SecurityConfig.java  UserFlowController.java
examples/springboot-v4-resource-server/src/main/resources/: application.yml
examples/springboot-v4-resource-server/src/test/java/com/example/demo/: ApiControllerTests.java  DemoApplicationTests.java  TestSecurityConfig.java
resterm/: example.http  requests.http  user-flow.http
