[package]
name = "oauth2-mock-server"
version = "0.1.0"
edition = "2024"
description = "A standalone Rust OAuth/OIDC mock server for local testing"
license = "MIT"
repository = "https://github.com/balchua/oauth2-mock-server"
readme = "../README.md"
keywords = ["oauth2", "oidc", "mock-server", "spring-boot", "testing"]
categories = ["authentication", "development-tools::testing", "web-programming"]

[lints]
workspace = true

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
config = { version = "0.14", default-features = false, features = ["yaml"] }
http = "1"
jsonwebtoken = { version = "10.1", features = ["aws_lc_rs"] }
oauth2-test-server = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.5", features = ["util"] }
